:white_check_mark: 리뷰 예외 처리 및 전체적인 성능 업그레이드